# OS_Colloq_2

./: OS_Colloq_2.sln  README.md
OS_Colloq_2/: ArrayData.h  CMakeLists.txt  Singleton.h  Tests.cpp  main.cpp
